--- a/index.html
+++ b/index.html
@@ -61,33 +61,39 @@
     </section>
 
     <!-- Parallax Section -->
-    <section class="parallax">
-        <div class="container">
-            <h2>Твій вибір — твій успіх</h2>
-            <p>Приєднуйся до нас та відкрий нові горизонти!</p>
-        </div>
-    </section>
+<section class="parallax">
+    <div class="container">
+        <h2>🔥 Твій вибір — твій успіх 🔥</h2>
+        <p>Відчуй адреналін із TonLand Shop!</p>
+    </div>
+</section>
+
 
     <!-- Shop Section -->
-    <section id="shop" class="shop">
-        <div class="container">
-            <h2>Магазин</h2>
-            <div class="products-grid">
-                <div class="product">
-                    <img src="assets/images/product1.jpg" alt="Product 1">
-                    <h3>Ексклюзивний товар 1</h3>
-                    <p>Ціна: $99</p>
-                    <a href="#" class="btn">Купити</a>
-                </div>
-                <div class="product">
-                    <img src="assets/images/product2.jpg" alt="Product 2">
-                    <h3>Ексклюзивний товар 2</h3>
-                    <p>Ціна: $199</p>
-                    <a href="#" class="btn">Купити</a>
-                </div>
+<section id="shop" class="shop">
+    <div class="container">
+        <h2>Магазин</h2>
+        <div class="products-grid">
+            <div class="product">
+                <div class="fire"></div>
+                <div class="smoke"></div>
+                <img src="assets/images/product1.jpg" alt="Product 1">
+                <h3>Ексклюзивний товар 1</h3>
+                <p>Ціна: $99</p>
+                <a href="#" class="btn">Купити</a>
+            </div>
+            <div class="product">
+                <div class="fire"></div>
+                <div class="smoke"></div>
+                <img src="assets/images/product2.jpg" alt="Product 2">
+                <h3>Ексклюзивний товар 2</h3>
+                <p>Ціна: $199</p>
+                <a href="#" class="btn">Купити</a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- Footer -->
     <footer>
